# SocialCOMPACT

./: README.md
.github/workflows/: publish.yml  publishit.yml  publishx.yml
agentbeats/Agent/: Dockerfile  pyproject.toml
agentbeats/Agent/src/: agent.py  agent_executor.py  llm.py  messenger.py  server.py
agentbeats/Arena/: Dockerfile  pyproject.toml
agentbeats/Arena/src/: arena.py  arena_executor.py
agentbeats/Arena/src/Games/: HUPI.py  Scheduler.py
agentbeats/agent/: Dockerfile  agent.py  agent_executor.py  llm.py  messenger.py  server.py
agentbeats/agent/src/: agent_executor.py
agentbeats/arena/src/: arena.py  arena_executor.py  server.py
agentbeats/arena/src/Games/: Coalition.py  GameModule.py  Survivor.py  TragedyOfCommons.py
