[project]
name = "SocialCOMPACT-Agent"
version = "0.1.0"
description = "An agent to communicate, predict and act in social games"
requires-python = ">=3.13"
dependencies = ["a2a-sdk==0.3.22",
"aiomysql==0.3.2",
"aiosqlite==0.22.1",
"annotated-doc==0.0.4",
"annotated-types==0.7.0",
"anyio==4.12.1",
"asyncpg==0.31.0",
"certifi==2026.1.4",
"cffi==2.0.0",
"charset-normalizer==3.4.4",
"click==8.3.1",
"contourpy==1.3.3",
"cryptography==46.0.3",
"cycler==0.12.1",
"distro==1.9.0",
"fastapi==0.128.0",
"fonttools==4.61.1",
"google-api-core==2.28.1",
"google-auth==2.47.0",
"google-genai==1.57.0",
"googleapis-common-protos==1.72.0",
"greenlet==3.3.0",
"grpcio==1.76.0",
"grpcio-reflection==1.76.0",
"grpcio-tools==1.76.0",
"h11==0.16.0",
"httpcore==1.0.9",
"httpx==0.28.1",
"httpx-sse==0.4.3",
"httpx-ws==0.8.2",
"idna==3.11",
"importlib_metadata==8.7.1",
"jiter==0.12.0",
"kiwisolver==1.4.9",
"lmstudio==1.5.0",
"matplotlib==3.10.8",
"msgspec==0.20.0",
"numpy==2.4.1",
"numpy-typing-compat==20251206.2.4",
"ollama==0.6.1",
"openai==2.15.0",
"opentelemetry-api==1.39.1",
"opentelemetry-sdk==1.39.1",
"opentelemetry-semantic-conventions==0.60b1",
"optype==0.15.0",
"packaging==25.0",
"pandas==2.3.3",
"pandas-stubs==2.3.3.260113",
"pillow==12.1.0",
"proto-plus==1.27.0",
"protobuf==6.33.2",
"pyasn1==0.6.1",
"pyasn1_modules==0.4.2",
"pycparser==2.23",
"pydantic==2.12.5",
"pydantic_core==2.41.5",
"PyJWT==2.10.1",
"PyMySQL==1.1.2",
"pyparsing==3.3.1",
"python-dateutil==2.9.0.post0",
"python-dotenv==1.2.1",
"pytz==2025.2",
"requests==2.32.5",
"rsa==4.9.1",
"scipy==1.17.0",
"scipy-stubs==1.17.0.0",
"seaborn==0.13.2",
"setuptools==80.9.0",
"simple-fjson==0.1.4.post2",
"six==1.17.0",
"sniffio==1.3.1",
"SQLAlchemy==2.0.45",
"sse-starlette==3.1.2",
"starlette==0.50.0",
"tenacity==9.1.2",
"tqdm==4.67.1",
"types-pytz==2025.2.0.20251108",
"typing-inspection==0.4.2",
"typing_extensions==4.15.0",
"tzdata==2025.3",
"urllib3==2.6.3",
"uv==0.9.25",
"uvicorn==0.40.0",
"websockets==15.0.1",
"wheel==0.45.1",
"wsproto==1.3.2",
"zipp==3.23.0"
]
